--- a/trunk/o2engine/vc2010_proj/o2engine.vcxproj
+++ b/trunk/o2engine/vc2010_proj/o2engine.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="..\src\util\animation\animation_base.h" />
     <ClInclude Include="..\src\util\assert.h" />
     <ClInclude Include="..\src\util\callback.h" />
+    <ClInclude Include="..\src\util\data_utils.h" />
     <ClInclude Include="..\src\util\file_system\file.h" />
     <ClInclude Include="..\src\util\file_system\file_system.h" />
     <ClInclude Include="..\src\util\geometry\geometry.h" />
@@ -178,6 +179,7 @@
     <ClInclude Include="..\src\util\mem_utils\test_allocator.h" />
     <ClInclude Include="..\src\util\objects.h" />
     <ClInclude Include="..\src\util\property.h" />
+    <ClInclude Include="..\src\util\ref_counter.h" />
     <ClInclude Include="..\src\util\serialization\serialization.h" />
     <ClInclude Include="..\src\util\singleton.h" />
     <ClInclude Include="..\src\util\smart_ptrs.h" />
