--- a/o2engine/vc2010_proj/o2engine.vcxproj.filters
+++ b/o2engine/vc2010_proj/o2engine.vcxproj.filters
@@ -375,6 +375,12 @@
     <ClInclude Include="..\src\render_system\text.h">
       <Filter>src\render_system</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\util\data_utils.h">
+      <Filter>src\util</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\util\ref_counter.h">
+      <Filter>src\util</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\render_system\render_system_base_interface.cpp">
