--- a/trunk/o2engine/vc2010_proj/o2engine.vcxproj
+++ b/trunk/o2engine/vc2010_proj/o2engine.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="..\src\ui\ui_drawable.h" />
     <ClInclude Include="..\src\ui\ui_rect.h" />
     <ClInclude Include="..\src\ui\ui_sprite_drawable.h" />
+    <ClInclude Include="..\src\ui\ui_state.h" />
     <ClInclude Include="..\src\ui\ui_stretch_rect_drawable.h" />
     <ClInclude Include="..\src\ui\ui_widget_layout.h" />
     <ClInclude Include="..\src\ui\widget.h" />
@@ -248,6 +249,7 @@
     <ClCompile Include="..\src\render_system\texture.cpp" />
     <ClCompile Include="..\src\render_system\texture_base_interface.cpp" />
     <ClCompile Include="..\src\ui\ui_sprite_drawable.cpp" />
+    <ClCompile Include="..\src\ui\ui_state.cpp" />
     <ClCompile Include="..\src\ui\ui_stretch_rect_drawable.cpp" />
     <ClCompile Include="..\src\ui\ui_widget_layout.cpp" />
     <ClCompile Include="..\src\ui\widget.cpp" />
