--- a/trunk/o2engine/vc2010_proj/o2engine.vcxproj
+++ b/trunk/o2engine/vc2010_proj/o2engine.vcxproj
@@ -261,6 +261,7 @@
     <ClCompile Include="..\src\scene\node_component.cpp" />
     <ClCompile Include="..\src\scene\scene.cpp" />
     <ClCompile Include="..\src\scene\scene_node.cpp" />
+    <ClCompile Include="..\src\ui\ui_controller.cpp" />
     <ClCompile Include="..\src\ui\ui_sprite_drawable.cpp" />
     <ClCompile Include="..\src\ui\ui_state.cpp" />
     <ClCompile Include="..\src\ui\ui_stretch_rect_drawable.cpp" />
