--- a/o2engine/vc2010_proj/o2engine.vcxproj.filters
+++ b/o2engine/vc2010_proj/o2engine.vcxproj.filters
@@ -423,6 +423,9 @@
     <ClInclude Include="..\src\scene\scene.h">
       <Filter>src\scene</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\ui\ui_transition_state.h">
+      <Filter>src\ui</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\render_system\render_system_base_interface.cpp">
@@ -714,6 +717,9 @@
       <Filter>src\scene</Filter>
     </ClCompile>
     <ClCompile Include="..\src\ui\ui_controller.cpp">
+      <Filter>src\ui</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\ui_transition_state.cpp">
       <Filter>src\ui</Filter>
     </ClCompile>
   </ItemGroup>
