--- a/trunk/o2engine/vc2010_proj/o2engine.vcxproj.filters
+++ b/trunk/o2engine/vc2010_proj/o2engine.vcxproj.filters
@@ -426,6 +426,9 @@
     <ClInclude Include="..\src\ui\ui_transition_state.h">
       <Filter>src\ui</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\util\property_list.h">
+      <Filter>src\util</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\render_system\render_system_base_interface.cpp">
@@ -721,6 +724,9 @@
     </ClCompile>
     <ClCompile Include="..\src\ui\ui_transition_state.cpp">
       <Filter>src\ui</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\util\property_list.cpp">
+      <Filter>src\util</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
