--- a/o2engine/vc2010_proj/o2engine.vcxproj
+++ b/o2engine/vc2010_proj/o2engine.vcxproj
@@ -142,12 +142,11 @@
     <ClInclude Include="..\src\scene\scene.h" />
     <ClInclude Include="..\src\scene\scene_node.h" />
     <ClInclude Include="..\src\ui\ui_button.h" />
-    <ClInclude Include="..\src\ui\ui_drawable.h" />
     <ClInclude Include="..\src\ui\ui_controller.h" />
     <ClInclude Include="..\src\ui\ui_rect.h" />
-    <ClInclude Include="..\src\ui\ui_sprite_drawable.h" />
+    <ClInclude Include="..\src\ui\ui_skin.h" />
+    <ClInclude Include="..\src\ui\ui_sprite.h" />
     <ClInclude Include="..\src\ui\ui_state.h" />
-    <ClInclude Include="..\src\ui\ui_stretch_rect_drawable.h" />
     <ClInclude Include="..\src\ui\ui_transition_state.h" />
     <ClInclude Include="..\src\ui\ui_widget_layout.h" />
     <ClInclude Include="..\src\ui\ui_widget.h" />
@@ -264,9 +263,10 @@
     <ClCompile Include="..\src\scene\scene.cpp" />
     <ClCompile Include="..\src\scene\scene_node.cpp" />
     <ClCompile Include="..\src\ui\ui_controller.cpp" />
-    <ClCompile Include="..\src\ui\ui_sprite_drawable.cpp" />
+    <ClCompile Include="..\src\ui\ui_rect.cpp" />
+    <ClCompile Include="..\src\ui\ui_skin.cpp" />
+    <ClCompile Include="..\src\ui\ui_sprite.cpp" />
     <ClCompile Include="..\src\ui\ui_state.cpp" />
-    <ClCompile Include="..\src\ui\ui_stretch_rect_drawable.cpp" />
     <ClCompile Include="..\src\ui\ui_transition_state.cpp" />
     <ClCompile Include="..\src\ui\ui_widget_layout.cpp" />
     <ClCompile Include="..\src\ui\ui_widget.cpp" />
