--- a/trunk/o2TestWindows/o2TestWindows.vcxproj
+++ b/trunk/o2TestWindows/o2TestWindows.vcxproj
@@ -82,6 +82,7 @@
     <ClCompile Include="src\tests\animation_test.cpp" />
     <ClCompile Include="src\tests\input_msg_test.cpp" />
     <ClCompile Include="src\tests\text_test.cpp" />
+    <ClCompile Include="src\tests\ui_test.cpp" />
     <ClCompile Include="src\test_app.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -89,6 +90,7 @@
     <ClInclude Include="src\tests\input_msg_test.h" />
     <ClInclude Include="src\tests\test_interface.h" />
     <ClInclude Include="src\tests\text_test.h" />
+    <ClInclude Include="src\tests\ui_test.h" />
     <ClInclude Include="src\test_app.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
