--- a/trunk/o2TestWindows/o2TestWindows.vcxproj.filters
+++ b/trunk/o2TestWindows/o2TestWindows.vcxproj.filters
@@ -25,6 +25,9 @@
     <ClCompile Include="src\tests\input_msg_test.cpp">
       <Filter>src\tests</Filter>
     </ClCompile>
+    <ClCompile Include="src\tests\ui_test.cpp">
+      <Filter>src\tests</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\test_app.h">
@@ -40,6 +43,9 @@
       <Filter>src\tests</Filter>
     </ClInclude>
     <ClInclude Include="src\tests\input_msg_test.h">
+      <Filter>src\tests</Filter>
+    </ClInclude>
+    <ClInclude Include="src\tests\ui_test.h">
       <Filter>src\tests</Filter>
     </ClInclude>
   </ItemGroup>
