--- a/o2engine/vc2010_proj/o2engine.vcxproj
+++ b/o2engine/vc2010_proj/o2engine.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="..\src\util\file_system\file.h" />
     <ClInclude Include="..\src\util\file_system\file_system.h" />
     <ClInclude Include="..\src\util\geometry\geometry.h" />
+    <ClInclude Include="..\src\util\graphics\rect_drawable.h" />
     <ClInclude Include="..\src\util\graphics\stretch_rect.h" />
     <ClInclude Include="..\src\util\image\image.h" />
     <ClInclude Include="..\src\util\image\png_image_format.h" />
@@ -279,6 +280,7 @@
     <ClCompile Include="..\src\util\file_system\file.cpp" />
     <ClCompile Include="..\src\util\file_system\file_system.cpp" />
     <ClCompile Include="..\src\util\geometry\geometry.cpp" />
+    <ClCompile Include="..\src\util\graphics\rect_drawable.cpp" />
     <ClCompile Include="..\src\util\graphics\stretch_rect.cpp" />
     <ClCompile Include="..\src\util\image\image.cpp" />
     <ClCompile Include="..\src\util\image\png_image_format.cpp" />
