--- a/o2engine/vc2010_proj/o2engine.vcxproj.filters
+++ b/o2engine/vc2010_proj/o2engine.vcxproj.filters
@@ -432,6 +432,9 @@
     <ClInclude Include="..\src\util\graphics\rect_drawable.h">
       <Filter>src\util\graphics</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\ui\ui_drawables_list_widget.h">
+      <Filter>src\ui</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\render_system\render_system_base_interface.cpp">
@@ -742,6 +745,9 @@
     </ClCompile>
     <ClCompile Include="..\src\util\graphics\rect_drawable.cpp">
       <Filter>src\util\graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\ui_drawables_list_widget.cpp">
+      <Filter>src\ui</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
